--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ intellij {
     version 'IU-2016.3'
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
-    plugins = ['JavaScriptLanguage', 'Tomcat', 'Velocity', 'Freemarker', 'maven', 'properties', 'css', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5']
+    plugins = ['JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'CSS', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5']
     updateSinceUntilBuild false
 }
 
