--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
 
 
 plugins {
-    id "org.jetbrains.intellij" version "0.2.18"
-    id 'de.undercouch.download' version '3.4.2'
+    id "org.jetbrains.intellij" version "0.3.5"
+    id 'de.undercouch.download' version '3.4.3'
 }
 
 import de.undercouch.gradle.tasks.download.Download
@@ -53,7 +53,11 @@ intellij {
     version 'IU-2016.3'
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
-    plugins = ['JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'java-i18n', 'CSS', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5']
+    plugins = [
+            'JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'java-i18n', 'CSS', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5',
+            //test only?
+            'Groovy', 'JUnit', 'PersistenceSupport', 'DatabaseTools'
+    ]
     updateSinceUntilBuild false
 }
 
