--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,6 +47,7 @@
     <depends optional="true" config-file="css.xml">com.intellij.css</depends>
     <depends optional="true" config-file="scss.xml">org.jetbrains.plugins.sass</depends>
     <depends optional="true" config-file="archetype-catalog.xml">de.dm.intellij.maven-archetypes-catalog-plugin</depends>
+    <depends optional="true" config-file="groovy.xml">org.intellij.groovy</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Define a new filetype for "bnd.bnd" files -->
