--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -43,7 +43,7 @@
             <li>Feature: Improved support for getSiblings() in Freemarker templates</li>
             <li>Feature: Inspections for service.xml</li>
             <li>Feature: Added taglib code completion for class names</li>
-            <li>Feature: Class Name completion inside serviceLocator.findService(), enumUtil and staticUtil in Freemarker templates</li>
+            <li>Feature: Class Name completion inside serviceLocator.findService(), enumUtil, staticUtil and staticFieldGetter in Freemarker templates</li>
             <li>Feature: Implicit resolve of serviceLocator, enumUtil and staticUtil instructions in Freemarker templates</li>
         </ul>
         <p>Version 0.0.2</p>
