Dropped support for IntelliJ 2016 and 2017, now requires 2018.1 and above

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
 }
 
 intellij {
-    version "IU-2018.2.1"
+//    version "IU-2017.3.4"
+    version "IU-2018.1.1"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
