Remove AlloyUIJSProvider (not needed anymore)

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,8 @@ dependencies {
 
 intellij {
 //    version "IU-2017.3.4"
-    version "IU-2018.1.1"
+//    version "IU-2018.1.1"
+    version "IU-2018.3.4"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
@@ -67,6 +68,10 @@ intellij {
             'Groovy', 'junit', 'PersistenceSupport', 'DatabaseTools'
     ]
     updateSinceUntilBuild false
+}
+
+runIde {
+    jvmArgs '-Xmx2048m'
 }
 
 task generateLiferayTemplateHelperFiles {
